--- a/JS basics/variables-and-operators/index.html
+++ b/JS basics/variables-and-operators/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
         <meta scheme="UTF-8">
         <head>
-                <title>Page title</title>
+                <title>Rock, Paper, Scissor</title>
         </head>
 
         <body>
-                        <script src="page.js"></script>
+                <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
+                <button id="scissor">Scissor</button>
+                <div id="results"></div>
+
+                <script src="page.js"></script>
         </body>
 </html>
